Remove legacy files and create new GUI